# RenderCoreEngine

./: .gitignore  README.md
RenderCoreEngine/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  appicon.aps  appicon.rc  vcpkg.json
RenderCoreEngine/JsProject/: RenderCoreEngine.js  RenderCoreEngine.wasm  RenderCoreEngine.worker.js  index.html  main.js  package-lock.json  package.json  server.js  style.css
RenderCoreEngine/libraries/: CMakeLists.txt
RenderCoreEngine/libraries/context/: CMakeLists.txt  Context.cpp  Context.hpp
RenderCoreEngine/libraries/debug/: CMakeLists.txt  Debug.cpp  Debug.h  Debug.hpp
RenderCoreEngine/libraries/graphicsEngine/: CMakeLists.txt  IComponentFactory.h  IGraphicsEngine.h  IGraphicsEngine.hpp  IShaderBuilder.h
RenderCoreEngine/libraries/graphicsEngine/interface/: IComponentFactory.h  IGraphicsEngine.h
RenderCoreEngine/libraries/graphicsEngine/openGLEngine/: CMakeLists.txt  IOpenGLEngine.cpp  IOpenGLEngine.h  OpenGLComponentFactory.cpp  OpenGLComponentFactory.h  OpenGLMeshRenderer.cpp  OpenGLMeshRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderBuilder.cpp  OpenGLShaderBuilder.h
RenderCoreEngine/libraries/graphicsEngine/openGLEngine/openGL3x/: CMakeLists.txt  OpenGL3x.cpp  OpenGL3x.h  OpenGL3x.hpp  OpenGL3xEngine.cpp  OpenGL3xEngine.h  OpenGL3xEngine.hpp  OpenGL3xShadersMeta.h  ShadersMeta.hpp
RenderCoreEngine/libraries/graphicsEngine/openGLEngine/openGL4x/: CMakeLists.txt  OpenGL4x.cpp  OpenGL4x.h  OpenGL4xEngine.cpp  OpenGL4xEngine.h  OpenGL4xEngine.hpp  OpenGL4xShadersMeta.h  ShadersMeta.hpp
RenderCoreEngine/libraries/graphicsEngine/openGLEngine/source/: OpenGLComponentFactory.cpp  OpenGLComponentFactory.h  OpenGLLineRenderer.cpp  OpenGLLineRenderer.h  OpenGLMaterial.cpp  OpenGLMaterial.h  OpenGLMeshRenderer.cpp  OpenGLMeshRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderBuilder.cpp  OpenGLShaderBuilder.h
RenderCoreEngine/libraries/graphicsEngine/vulkanEngine/: CMakeLists.txt  Vulkan.h  VulkanEngine.h  VulkanEngine.hpp
RenderCoreEngine/libraries/graphicsEngine/webGpuEngine/: CMakeLists.txt  WebGpu.h  WebGpuEngine.h  WebGpuEngine.hpp
RenderCoreEngine/libraries/mathLib/: CMakeLists.txt  MathLib.h  MathLib.hpp  RcMath.h  RcMathd..h  Rect.h  Rect.hpp  Transform.h  Transform.hpp
RenderCoreEngine/libraries/myLibraries/: CMakeLists.txt
RenderCoreEngine/libraries/myLibraries/glfwContext/: Context.hpp
RenderCoreEngine/libraries/myLibraries/mathLib/: Math.hpp  Transform.hpp
RenderCoreEngine/libraries/myLibraries/openGL/: OpenGL.hpp
RenderCoreEngine/libraries/myLibraries/vulkan/: Vulkan.hpp
RenderCoreEngine/libraries/myLibraries/webGL/: WebGL.hpp
RenderCoreEngine/libraries/myLibraries/webGpu/: WebGpu.hpp
RenderCoreEngine/libraries/openGLEngine/: CMakeLists.txt  OpenGL.cpp  OpenGL.hpp
RenderCoreEngine/libraries/openGLEngine/openGL3x/: OpenGL3x.cpp  OpenGL3x.hpp
RenderCoreEngine/libraries/openGLEngine/openGL4x/: OpenGL4x.cpp
RenderCoreEngine/libraries/platform/: CMakeLists.txt  GlfwWindow.h  IContext.cpp  IContext.h  IContext.hpp  IRenderSurface.cpp  IRenderSurface.h  IRenderSurfaceGlfw.cpp  IRenderSurfaceGlfw.h
RenderCoreEngine/libraries/platform/browser/: ContextBrowser.cpp  ContextBrowser.h  ContextBrowser.hpp  RenderSurfaceBrowser.cpp  RenderSurfaceBrowser.h  RenderSurfaceGlfwBrowser.cpp  RenderSurfaceGlfwBrowser.h  WebGL.hpp
RenderCoreEngine/libraries/platform/browser/rcEmscripten/: RcEmscripten.h
RenderCoreEngine/libraries/platform/windows/: ContextWindows.cpp  ContextWindows.h  ContextWindows.hpp  RenderSurfaceWin64.cpp  RenderSurfaceWin64.h
RenderCoreEngine/libraries/renderCore/: CMakeLists.txt  RenderCore.hpp
RenderCoreEngine/libraries/renderCore/vertexEngine/Camera/: Camera.cpp
RenderCoreEngine/libraries/renderCore/vertexEngine/Mesh/: Mesh.hpp
RenderCoreEngine/libraries/renderCoreEngine/: CMakeLists.txt  GraphicsObjectFactory.h  RenderCore.h  RenderCoreEngine.cpp  RenderCoreEngine.h  RenderCoreShaderDB.h
RenderCoreEngine/libraries/renderCoreEngine/Scene/: GraphicsFactory.cpp  GraphicsFactory.h  GraphicsObject.cpp  GraphicsObject.h  IComponent.h  RenderCoreBatch.cpp  RenderCoreBatch.h  Scene.cpp  Scene.h
RenderCoreEngine/libraries/renderCoreEngine/Updaters/: FrameRateTracker.cpp  FrameRateTracker.h
RenderCoreEngine/libraries/renderCoreEngine/behaviours/: Behaviour.cpp  Behaviour.h
RenderCoreEngine/libraries/renderCoreEngine/components/: Behaviour.cpp  Behaviour.h  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  MeshFilter.cpp  MeshFilter.h  Transform.cpp  Transform.h
RenderCoreEngine/libraries/renderCoreEngine/components/behaviours/: Behaviour.cpp
RenderCoreEngine/libraries/renderCoreEngine/components/interface/: IBehaviour.h  ICamera.h  IComponent.h  ILight.h  ILineRenderer.h  IMaterial.h  IMeshRenderer.h  IRenderer.h  IRequiredComponent.h  IShader.h  IUpdate.h
RenderCoreEngine/libraries/renderCoreEngine/graphics/: ILineRenderer.h  IMaterial.h  IMeshRenderer.h  IRenderer.h  IShader.h  RenderData.h  Shader.h  ShaderMetaData.h  ShaderProgram.h  UniformVariable.h
RenderCoreEngine/libraries/renderCoreEngine/graphics/camera/: Camera.cpp
RenderCoreEngine/libraries/renderCoreEngine/graphics/mesh/: Mesh.cpp  Mesh.h
RenderCoreEngine/libraries/renderCoreEngine/graphics/vertexPipeline/: Line.cpp  Line.h
RenderCoreEngine/libraries/renderCoreEngine/inputDevices/: DesktopInputHandler.cpp  DesktopInputHandler.h  IInputHandler.h
RenderCoreEngine/libraries/renderCoreEngine/source/: Screen.cpp  Screen.h
RenderCoreEngine/libraries/renderCoreEngine/vertexPipeline/camera/: Camera.hpp
RenderCoreEngine/libraries/renderCoreEngine/vertexPipeline/mesh/: Mesh.cpp
RenderCoreEngine/libraries/userInterface/: CMakeLists.txt  IUILibrary.h  NuklearTest.cpp  NuklearTest.h  Test.cpp  Test.h  UserInterface.h  UserInterfaceEngine.cpp  UserInterfaceEngine.h
RenderCoreEngine/resources/: CMakeLists.txt
RenderCoreEngine/src/: AppMainBrowser.cpp  AppMainWin64.cpp  CMakeLists.txt  RCEngine.cpp  RCEngine.hpp  RCEngineMain.cpp  RCEngineMain.h  RenderCoreEngine.cpp
(+16 files in other folders)
